# fluffyrocket

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: ridge.py
src/fluffyrocket/: __init__.py  _minirocket.py  base.py  fluffyrocket.py  minirocket.py
tests/: test_learn.py
