[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fluffyrocket"
version = "0.0.0"
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
description = "PyTorch implementation of MiniRocket with soft PPV"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0"
license-files = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "numba",
    "torch",
]

[project.urls]
homepage = "https://pypi.python.org/pypi/fluffyrocket/"
source = "https://github.com/JSS95/fluffyrocket"

[project.optional-dependencies]
test = [
    "pytest",
    "aeon",
]
dev = [
    "flake8",
    "black",
    "isort",
    "fluffyrocket[test]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
exclude="src/fluffyrocket/_minirocket.py"

[tool.isort]
profile = "black"
skip = ["src/fluffyrocket/_minirocket.py"]

[tool.pytest.ini_options]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
addopts = "--ignore=doc --doctest-modules --import-mode=importlib"